--- a/style.css
+++ b/style.css
@@ -11,4 +11,18 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 70px;
+}
+
+.inputField{
+    width: 400px;
+    height: 100px;
+    font-size: 40px;
+    border: 3px solid purple;
+    border-radius: 8px;
+    outline: none;
+}
+
+.image{
+    width: 200px;
 }
