--- a/style.css
+++ b/style.css
@@ -26,3 +26,32 @@ body{
 .image{
     width: 200px;
 }
+
+.action_button{
+    height: 100px;
+    width: 100px;
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.action_button:hover{
+    color: purple;
+    transition: 0.3s;
+}
+
+.action_container{
+    display: flex;
+}
+
+.result_container{
+    display: flex;
+    align-items: center;
+}
+
+.result_text{
+   font-size: 40px;
+   width: 170px;
+}
